welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
  for (i <-0 to taille - 1)
         ^Array2:21: error: not found: value decalge
  var c = T((0+decalge)%taille)
               ^Array2:42: error: not found: value T
  T = met_couleur_tableau()
  ^Array2:49: error: not found: value T
      coloriage(T,decalage)
                ^